[NEW] setup commits

--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -6,10 +6,10 @@
             <a class="nav-link navbar-toggler sidebar-toggler" href="#">&#9776;</a>
         </li>
     </ul>
-    <ul class="nav navbar-nav ml-auto hidden-md-down">
-        <li class="nav-item">
+    <ul class="nav navbar-nav ml-auto hidden-md-down" style="margin-right: 15px;">
+        <!--<li class="nav-item">
             <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
-        </li>
+        </li>-->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <span class="hidden-md-down">admin</span>
