new pages commit

--- a/views/addagent.html
+++ b/views/addagent.html
@@ -5,7 +5,7 @@
 
             <div class="card">
                 <div class="card-header">
-                   <h3> <strong>Add Customer Form</strong></h3>
+                   <h3> <strong>Add Agent Form</strong></h3>
                    
                 </div>
                 <div class="card-block">
