--- a/views/common/sidebar-nav.html
+++ b/views/common/sidebar-nav.html
@@ -2,9 +2,34 @@
     <nav class="sidebar-nav">
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" ui-sref-active="active" ui-sref="app.main"><i class="icon-speedometer"></i> Dashboard <span class="badge badge-info">NEW</span></a>
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.admindashboard"><i class="icon-speedometer"></i> Dashboard </a>
             </li>
-
+            <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.agentdashboard"><i class="icon-speedometer"></i> Dashboard </a>
+            </li>
+            <li class="nav-item nav-dropdown" ng-class="{open: $state.includes('app.adminapplication')}">
+                <a class="nav-link nav-dropdown-toggle" ng-class="{active: $state.includes('app.adminapplication')}" href="#"><i class="icon-book-open"></i> Application</a>
+                <ul class="nav-dropdown-items">
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref-active="active" ui-sref="app.adminapplication.allapp" style="padding-left: 50px;"> All</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref-active="active" ui-sref="app.adminapplication.newapp" style="padding-left: 50px;"> New</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref-active="active" ui-sref="app.adminapplication.amendapp" style="padding-left: 50px;"> Amend</a>
+                    </li>
+                     <li class="nav-item">
+                        <a class="nav-link" ui-sref-active="active" ui-sref="app.adminapplication.approveapp" style="padding-left: 50px;"> Approved</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref-active="active" ui-sref="app.adminapplication.rejectapp" style="padding-left: 50px;"> Rejected</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" ui-sref-active="active" ui-sref="app.adminapplication.resubmissionapp" style="padding-left: 50px;"> Re-Submission</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </nav>
 </div>
