[new] agent list added

--- a/css/style.css
+++ b/css/style.css
@@ -8581,7 +8581,8 @@ app-root {
 .header-fixed .app-header {
   position: fixed;
   z-index: 1020;
-  width: 100%; }
+  width: 100%;
+  top: 0; }
 
 .header-fixed .app-body {
   margin-top: 55px; }
