--- a/views/common/layouts/full.html
+++ b/views/common/layouts/full.html
@@ -1,3 +1,4 @@
+<div ng-controller="applicationCtrl">
 <!-- Navbar -->
 <div ng-include="'views/common/navbar.html'"></div>
 
@@ -25,3 +26,4 @@
 
 <!-- Footer -->
 <div ng-include="'views/common/footer.html'"></div>
+</div>
