--- a/views/common/sidebar-nav.html
+++ b/views/common/sidebar-nav.html
@@ -30,6 +30,9 @@
                     </li>
                 </ul>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" ui-sref-active="active" ui-sref="app.agent.viewagentlist"><i class="icon-speedometer"></i> Agent </a>
+            </li>
         </ul>
     </nav>
 </div>
