--- a/views/pages/admin/agentlist.html
+++ b/views/pages/admin/agentlist.html
@@ -1,28 +1,32 @@
-<div class="animated fadeIn">
-    <table datatable="" class="row-border hover">
+<div class="animated fadeIn" ng-controller="agentlistCtrl">
+    <div>
+        <button type="button" class="btn btn-success" ng-click="addAgent()"><i class="fa fa-user-plus"></i> Add Agent</button>
+    </div>
+    <br/>
+    <br/>
+    <table datatable="ng" class="row-border hover">
         <thead>
             <tr>
+                <!--<th>Options</th>-->
                 <th>Name</th>
+                <th>Gender</th>
                 <th>Mobile</th>
                 <th>Email</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>sivakvai</td>
-                <td>9629129377</td>
-                <td>sivakavij@gmail.com</td>
-            </tr>
-            <tr>
-                <td>santhosh</td>
-                <td>9894252587</td>
-                <td>sivakavij@gmail.com</td>
-            </tr>
-            <tr>
-                <td>mr x</td>
-                <td>1234567890</td>
-                <td>sivakavij@gmail.com</td>
+            <tr ng-repeat="agent in agentList">
+                <!--<td>
+                    <button ng-click="editAgent(agent.id)" class="btn btn-sm btn-primary" type="button"><i class="fa fa-edit"></i></button> &nbsp;&nbsp;&nbsp;
+                    <button class="btn btn-sm btn-danger" type="button"><i class="fa fa-ban"></i></button>
+                </td>-->
+                <td>{{ agent.name }}</td>
+                <td>{{ agent.gender }}</td>
+                <td>{{ agent.phone }}</td>
+                <td>{{ agent.email }}</td>
             </tr>
         </tbody>
     </table>
+    <br/>
+    <br/>
 </div>
