[new] edit profile added

--- a/views/pages/profile.html
+++ b/views/pages/profile.html
@@ -27,6 +27,10 @@
                         {{profile.gender}}
                     </div>
 				</div>
+				<br/>
+				<br/>
+
+				<center><button type="button" class="btn btn-success" ng-click="editProfile()">Edit Profile</button></center>
 				
 				
 			</div>
