--- a/views/pages/admin/adminallapp.html
+++ b/views/pages/admin/adminallapp.html
@@ -1,3 +1,32 @@
-<div class="animated fadeIn">
-    <h1>all app.....</h1>
+<div class="animated fadeIn" ng-controller="adminallappCtrl">
+    
+    <table datatable="ng" class="row-border hover">
+        <thead>
+            <tr>
+                <!--<th>Options</th>-->
+                <th>ID</th>
+                <th>NRIC</th>
+                <th>Name</th>
+                <th>Gender</th>
+                <th>Mobile</th>
+                <th>Status</th>
+                
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="app in appList">
+                <!--<td>
+                    
+                </td>-->
+                <td>{{ app.id }}</td>
+                <td>{{ app.nric }}</td>
+                <td>{{ app.name }}</td>
+                <td>{{ app.gender }}</td>
+                <td>{{ app.contact }}</td>
+                <td>{{ app.status.name }}</td>
+            </tr>
+        </tbody>
+    </table>
+    <br/>
+    <br/>
 </div>
