--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -22,7 +22,7 @@
 
                 
                 <a class="dropdown-item" ui-sref="app.profile"><i class="fa fa-user"></i> Profile</a>
-                <a class="dropdown-item" href="#"><i class="fa fa-key"></i> Password Reset</a>
+                <!--<a class="dropdown-item" ui-sref="app.changepassword"><i class="fa fa-key"></i> Password Reset</a>-->
                 <a class="dropdown-item" ng-click="logoutFunciton()"><i class="icon-power"></i> Logout</a>
             </div>
         </li>
